@@ -54,16 +54,16 @@ class FTIAwareSpecification(ObjectSpecificationDescriptor):
     """A __providedBy__ decorator that returns the interfaces provided by
     the object, plus the schema interface set in the FTI.
     """
-    
+
     def __get__(self, inst, cls=None):
         # We're looking at a class - fall back on default
         if inst is None:
             return getObjectSpecification(cls)
-        
+
         # Find the data we need to know if our cache needs to be invalidated
         direct_spec = getattr(inst, '__provides__', None)
         portal_type = getattr(inst, 'portal_type', None)
-        
+
         spec = direct_spec
 
         # If the instance doesn't have a __provides__ attribute, get the
@@ -119,30 +119,30 @@ class AttributeValidator(Explicit):
     __allow_access_to_unprotected_subobjects__ variable in Dexterity's content
     classes.
     """
-    
+
     def __call__(self, name, value):
-        
+
         # Short circuit for things like views or viewlets
         if name == '':
             return 1
-        
+
         context = aq_parent(self)
-        
+
         schema = self._get_schema(context)
         if schema is None:
             return 1
-        
+
         info = mergedTaggedValueDict(schema, READ_PERMISSIONS_KEY)
-        
+
         if name not in info:
             return 1
-        
+
         permission = queryUtility(IPermission, name=info[name])
         if permission is not None:
             return getSecurityManager().checkPermission(permission.title, context)
-        
+
         return 0
-    
+
     def _get_schema(self, inst):
         portal_type = getattr(inst, 'portal_type', None)
         if portal_type is not None:
@@ -175,13 +175,13 @@ class DexterityContent(DAVResourceMixin, PortalContent, DefaultDublinCoreImpl, C
     implements(IDexterityContent, IAttributeAnnotatable, IAttributeUUID)
     __providedBy__ = FTIAwareSpecification()
     __allow_access_to_unprotected_subobjects__ = AttributeValidator()
-    
+
     # portal_type is set by the add view and/or factory
     portal_type = None
 
     # description should always be a string
     description = u''
-    
+
     def __getattr__(self, name):
         # optimization: sometimes we're asked for special attributes
         # such as __conform__ that we can disregard (because we
@@ -205,11 +205,11 @@ class DexterityContent(DAVResourceMixin, PortalContent, DefaultDublinCoreImpl, C
                 return deepcopy(field.default)
 
         raise AttributeError(name)
-    
+
     # Let __name__ and id be identical. Note that id must be ASCII in Zope 2,
     # but __name__ should be unicode. Note that setting the name to something
     # that can't be encoded to ASCII will throw a UnicodeEncodeError
-    
+
     def _get__name__(self):
         return unicode(self.id)
     def _set__name__(self, value):
@@ -226,24 +226,31 @@ class DexterityContent(DAVResourceMixin, PortalContent, DefaultDublinCoreImpl, C
         if isinstance(title, str):
             title = title.decode('utf-8')
         self.title = title
-    
+
     def Title(self):
         # this is a CMF-style accessor, so should return utf8-encoded
         if isinstance(self.title, unicode):
             return self.title.encode('utf-8')
         return self.title or ''
 
+    def Creator(self):
+        # this is a CMF-style accessor, so should return utf8-encoded
+        creator = super(DexterityContent, self).Creator()
+        if isinstance(creator, unicode):
+            creator = creator.encode('utf-8')
+        return creator
+
     def setDescription(self, description):
         if isinstance(description, str):
             description = description.decode('utf-8')
         self.description = description
-    
+
     def Description(self):
         # this is a CMF-style accessor, so should return utf8-encoded
         if isinstance(self.description, unicode):
             return self.description.encode('utf-8')
         return self.description or ''
-    
+
     def setSubject(self, subject):
         subject = tuplize('subject', subject)
         s = []
@@ -252,7 +259,7 @@ class DexterityContent(DAVResourceMixin, PortalContent, DefaultDublinCoreImpl, C
                 part = part.decode('utf-8')
             s.append(part)
         self.subject = tuple(s)
-    
+
     def Subject(self):
         # this is a CMF-style accessor, so should return utf8-encoded
         s = []
@@ -267,13 +274,13 @@ class DexterityContent(DAVResourceMixin, PortalContent, DefaultDublinCoreImpl, C
 class Item(PasteBehaviourMixin, BrowserDefaultMixin, DexterityContent):
     """A non-containerish, CMFish item
     """
-    
+
     implements(IDexterityItem)
     __providedBy__ = FTIAwareSpecification()
     __allow_access_to_unprotected_subobjects__ = AttributeValidator()
-    
+
     isPrincipiaFolderish = 0
-    
+
     def __init__(self, id=None, **kwargs):
         if id is not None:
             self.id = id
@@ -288,7 +295,7 @@ class Item(PasteBehaviourMixin, BrowserDefaultMixin, DexterityContent):
         DefaultDublinCoreImpl.__init__(self, **dublin_kw)
         for (k,v) in kwargs.items():
             setattr(self, k, v)
-    
+
     # Be explicit about which __getattr__ to use
     __getattr__ = DexterityContent.__getattr__
 
@@ -296,20 +303,20 @@ class Item(PasteBehaviourMixin, BrowserDefaultMixin, DexterityContent):
 class Container(PasteBehaviourMixin, DAVCollectionMixin, BrowserDefaultMixin, CMFCatalogAware, CMFOrderedBTreeFolderBase, DexterityContent):
     """Base class for folderish items
     """
-    
+
     implements(IDexterityContainer)
     __providedBy__ = FTIAwareSpecification()
     __allow_access_to_unprotected_subobjects__ = AttributeValidator()
-    
+
     security = ClassSecurityInfo()
     security.declareProtected(AccessControl.Permissions.copy_or_move, 'manage_copyObjects')
     security.declareProtected(Products.CMFCore.permissions.ModifyPortalContent, 'manage_cutObjects')
     security.declareProtected(Products.CMFCore.permissions.ModifyPortalContent, 'manage_pasteObjects')
-    security.declareProtected(Products.CMFCore.permissions.ModifyPortalContent, 'manage_renameObject')    
+    security.declareProtected(Products.CMFCore.permissions.ModifyPortalContent, 'manage_renameObject')
     security.declareProtected(Products.CMFCore.permissions.ModifyPortalContent, 'manage_renameObjects')
-    
+
     isPrincipiaFolderish = 1
-    
+
     # make sure CMFCatalogAware's manage_options don't take precedence
     manage_options = PortalFolderBase.manage_options
 
@@ -332,7 +339,7 @@ class Container(PasteBehaviourMixin, DAVCollectionMixin, BrowserDefaultMixin, CM
 
         for (k,v) in kwargs.items():
             setattr(self, k, v)
-    
+
     def __getattr__(self, name):
         try:
             return DexterityContent.__getattr__(self, name)
@@ -341,7 +348,7 @@ class Container(PasteBehaviourMixin, DAVCollectionMixin, BrowserDefaultMixin, CM
 
         # Be specific about the implementation we use
         return CMFOrderedBTreeFolderBase.__getattr__(self, name)
-    
+
     security.declareProtected(Products.CMFCore.permissions.DeleteObjects, 'manage_delObjects')
     def manage_delObjects(self, ids=None, REQUEST=None):
         """Delete the contained objects with the specified ids.
@@ -388,11 +395,11 @@ class Container(PasteBehaviourMixin, DAVCollectionMixin, BrowserDefaultMixin, CM
 def reindexOnModify(content, event):
     """When an object is modified, re-index it in the catalog
     """
-    
+
     if event.object is not content:
         return
-    
+
     # NOTE: We are not using event.descriptions because the field names may
     # not match index names.
-    
+
     content.reindexObject()
